# qgis_umesh

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_msvc.cmd  dispatch_debug_dll_to_qgis.bat  dispatch_release_dll_to_qgis.bat  qgis_umesh.sln  qgis_umesh_dev.sln  qgis_umesh_dev_dll.sln  readme.txt  sonar-project.properties
cfts_history/: cfts_history.vcxproj  cfts_history.vcxproj.filters
cfts_history/include/: his_cf.h
cfts_history/src/: his_cf.cpp
cfts_history_api/: cfts_history_api.vcxproj  cfts_history_api.vcxproj.filters
cfts_history_api/include/: cfts_history_api.h
cfts_history_api/src/: cfts_history_api.cpp
doc/: qgis_umesh_installation.tex  qgis_umesh_um.tex  qumesh_installation.tex  qumesh_um.tex  uml_qgis_umesh.uxf
lib/x64/debug/: qgis_analysis.lib  qgis_networkanalysis.lib
lib/x64/release/: netcdf.lib  qgis_analysis.lib
scripts/: git_insert_hash.cmd  git_insert_hash.ps1  git_is_local_modified.cmd
sgrid_ugrid/: sgrid_ugrid.vcxproj  sgrid_ugrid.vcxproj.filters
sgrid_ugrid/include/: perf_timer.h  sgrid_ugrid.h
sgrid_ugrid/src/: perf_timer.cpp  sgrid_ugrid.cpp
sgrid_ugrid_api/: sgrid_ugrid_api.vcxproj  sgrid_ugrid_api.vcxproj.filters
sgrid_ugrid_api/include/: sgrid_ugrid_api.h
sgrid_ugrid_api/src/: sgrid_ugrid_api.cpp
